@@ -1,3 +1,10 @@
+Sun Oct 21 13:38:09 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/check_mandirs.c (purge_missing): If there is no content, that
+	  might just be because the key was already freed while purging an
+	  earlier multi key, so skip to the next key rather than breaking
+	  out of the loop.
+
 Sun Oct 21 13:33:38 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac: Check for gdbm_exists in DBLIBS as well as LIBS.
